[package]
name = "package-family-name"
version = "2.1.1"
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
categories = ["no-std"]
description = "Library for calculating MSIX Package Family Name values."
documentation = "https://docs.rs/package-family-name"
readme = "README.md"
repository = "https://github.com/russellbanks/package-family-name"

[dependencies]
fast32 = { version = "1.0.1", default-features = false }
heapless = { version = "0.9", default-features = false }
serde_core = { version = "1", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false }
thiserror = { version = "2", default-features = false }

[features]
serde = ["dep:serde_core"]

[dev-dependencies]
foldhash = { version = "0.2", default-features = false }
